-update source for mutil CMakeLists.txt

--- a/NativeC/app/src/main/cpp/project/CMakeLists.txt
+++ b/NativeC/app/src/main/cpp/project/CMakeLists.txt
@@ -10,16 +10,15 @@ cmake_minimum_required(VERSION 3.4.1)
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 
+project(CORE)
 add_library( # Sets the name of the library.
-        native-lib
+        core-lib
 
         # Sets the library as a shared library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        jni/native-lib.cpp
-        jni/package_utils.cpp
-        )
+        _main_.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -27,22 +26,9 @@ add_library( # Sets the name of the library.
 # you want to add. CMake verifies that the library exists before
 # completing its build.
 
-find_library( # Sets the name of the path variable.
-        log-lib
-
-        # Specifies the name of the NDK library that
-        # you want CMake to locate.
-        log)
-
-# Specifies libraries CMake should link to your target library. You
-# can link multiple libraries, such as libraries you define in this
-# build script, prebuilt third-party libraries, or system libraries.
-
-add_subdirectory(project)
 
 target_link_libraries( # Specifies the target library.
-        native-lib
-
-        # Links the target library to the log library
-        # included in the NDK.
-        ${log-lib})
+        core-lib
+        PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        )
