--- a/NativeC/app/build.gradle
+++ b/NativeC/app/build.gradle
@@ -28,6 +28,11 @@ android {
             version "3.10.2"
         }
     }
+    sourceSets {
+        main {
+            jni.srcDirs = ['src/main/cpp/jni']
+        }
+    }
 }
 
 dependencies {
